# QT_Gerdt

Gerdt_oopp/: AnimatedFilm.h  Animatedfilm.cpp  CMakeLists.txt  MyWidgetGerdt.cpp  MyWidgetGerdt.h  films.cpp  films.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h
